fix: Fix Vulkan backend crash and implement multi-backend framework
### Core Fixes
- Vulkan crash fix : Replace GGML_ABORT("fatal error") with return in `ggml-vulkan.cpp` line 4312
- Graceful degradation : Enable fallback to CPU backend when Vulkan version < 1.2
- Multi-backend compatibility : Ensure other backends continue loading when one fails
### Backend Loading Strategy
- Unified interface : Use ggml_backend_load_all() for consistent backend loading
- Backend selection logic : CPU sets layer=0, Vulkan checks version>=1.2 sets layer=-1
- Error isolation : Single backend failure doesn't affect other backend registration
- JNI layer protection : Ensure n_gpu_layers=0 works properly for CPU fallback
### Multi-Backend UI Framework
- Backend state management : Unified management and switching mechanism
- Dynamic backend switching : Runtime backend switching without app restart
- Status feedback : Real-time backend loading status feedback
- Error handling UI : User-friendly error messages for backend failures
- Performance monitoring : Integrated multi-backend performance monitoring
### Build & Compilation
- Fix Vulkan warnings : Resolve VULKAN_HPP_DISPATCH_LOADER_DYNAMIC unused variable warnings
- Optimize backend registration : Prevent duplicate backend registration
- ABI build optimization : Investigate and fix duplicate ABI builds (e.g., arm64-v8a-2)
### Documentation
- Update SPEC.md : Document backend loading strategy and crash fixes
- Best practices : Add graceful error handling guidelines
- Technical details : Document Vulkan version checking and multi-backend compatibility
Impact : Fixes critical stability issues on Android devices with Vulkan < 1.2, establishes complete multi-backend management framework, ensures stable operation across diverse hardware configurations.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -845,7 +845,8 @@
     <string name="label_priority_manual_params">Prioritize Manual Parameters</string>
     <string name="title_global_settings">Global Settings</string>
     <string name="label_debug_mode">Debug Mode</string>
-    <string name="label_use_gpu">Use GPU Acceleration (if available)</string>
+    <string name="label_backend_preference">Backend Preference</string>
+
     <string name="label_font_size">Font Size</string>
     <string name="text_font_size_value">Font Size: 16sp</string>
     <string name="button_save_settings">Save Settings</string>
